--- a/real_estate.ipynb
+++ b/real_estate.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loan amount:  750000\n",
-      "monthly:  3420.384765166349\n",
-      "total interest:  481338.5154598856\n",
-      "total monthly:  5424.134765166349\n",
-      "annual cost to own [%]:  0.06851538650736441\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fixed monthly payment\n",
     "# P = L[c(1 + c)n]/[(1 + c)n - 1]\n",
@@ -37,39 +25,53 @@
     "monthly_interest_rate = interest_rate/12.0/100.0\n",
     "n_months = yrs*12.0\n",
     "P = loan_amt*monthly_interest_rate*(1+monthly_interest_rate)**n_months/((1+monthly_interest_rate)**n_months-1)\n",
+    "total_interest = P*n_months-loan_amt\n",
     "\n",
+    "# interest vs principal payment schedule\n",
+    "interest_paid = []\n",
+    "remaining_principal = price\n",
+    "for i in range(12*yrs):\n",
+    "    paid = 0\n",
+    "    for m in range(12):\n",
+    "        interest_payment = monthly_interest_rate*remaining_principal\n",
+    "        paid += interest_payment\n",
+    "        remaining_principal -= (P - interest_payment)\n",
+    "    interest_paid.append(round(paid,2))\n",
+    "\n",
+    "print(\"Mortgage Info\\n===================\")\n",
     "print(\"loan amount: \", loan_amt)\n",
-    "print(\"monthly: \", P)\n",
-    "print(\"total interest: \", P*n_months-loan_amt)\n",
+    "print(\"total interest: \", total_interest)\n",
+    "print(\"monthly payment: \", P)\n",
+    "print(\"yearly interest payment:\\n\\t\", interest_paid)\n",
+    "print()\n",
     "\n",
-    "# Other expenses, monthly\n",
+    "# fixed expenses, monthly\n",
     "\n",
     "insurance = 165.0\n",
     "utilities = 200.0\n",
     "property_tax = 0.57/100/12*price\n",
     "maintenance = 0.015*price/12\n",
+    "costs_monthly = P + insurance + utilities + property_tax + maintenance\n",
     "\n",
-    "total_monthly = P + insurance + utilities + property_tax + maintenance\n",
-    "annual_cost_to_own = total_monthly*12/price\n",
-    "print(\"total monthly: \", total_monthly)\n",
-    "print(\"annual cost to own [%]: \", annual_cost_to_own)"
+    "# tax deductions, monthly\n",
+    "\n",
+    "marginal_tax_rate = .33 + .0463\n",
+    "tax_savings = []\n",
+    "for i in range(yrs):\n",
+    "    tax_deduction = interest_paid[i] - (300000-166700)*.03*.33\n",
+    "    tax_savings.append(round(annual_tax_deduction * marginal_tax_rate, 2))\n",
+    "\n",
+    "# total annual costs\n",
+    "annual_cost_to_own = []\n",
+    "for i in range(yrs):\n",
+    "    annual_cost_to_own.append(round(costs_monthly*12 - tax_savings[i],2))\n",
+    "    \n",
+    "print(\"Costs Info\\n===================\")\n",
+    "print(\"yearly cost to own: \", costs_monthly*12)\n",
+    "print(\"yearly tax savings: \", tax_savings)\n",
+    "print(\"annual cost to own: \", annual_cost_to_own)\n",
+    "print(\"annual cost to own [%]: \", annual_cost_to_own/price)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total monthly:  5424.134765166349\n",
-      "annual cost to own [%]:  0.06851538650736441\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -95,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
