--- a/real_estate.ipynb
+++ b/real_estate.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -18,25 +18,46 @@
      "text": [
       "Mortgage Info\n",
       "===================\n",
-      "loan amount:  750000\n",
+      "loan amount:  750000.0\n",
       "total interest:  481338.5154598856\n",
       "monthly payment:  3420.384765166349\n",
       "yearly interest payment:\n",
       "\t [34326.61, 34079.0, 33822.26, 33556.05, 33280.04, 32993.85, 32697.11, 32389.43, 32070.42, 31739.64, 31396.67, 31041.07, 30672.35, 30290.05, 29893.65, 29482.64, 29056.49, 28614.63, 28156.48, 27681.44, 27188.89, 26678.2, 26148.67, 25599.63, 25030.35, 24440.09, 23828.08, 23193.5, 22535.54, 21853.33]\n",
       "\n",
-      "Costs Info\n",
+      "Buying Info\n",
       "===================\n",
+      "yearly total income:  [308000.0, 326252.04, 345478.52, 365725.85, 387042.51, 409479.16, 433088.74, 457926.52, 104019.23, 104943.68, 105877.5, 106820.43, 107772.18, 108732.43, 109700.84, 110677.04, 111660.63, 112651.15, 113648.15, 114651.09, 115659.42, 116672.56, 117689.85, 118710.61, 119734.11, 120759.54, 121786.08, 122812.81, 123838.77, 124862.95] \n",
+      "\n",
       "yearly cost to own:  65089.61718199619\n",
       "yearly tax savings: \n",
-      "\t [12420.51, 12327.34, 12230.72, 12130.55, 12026.69, 11918.99, 11807.33, 11691.55, 11571.51, 11447.03, 11317.98, 11184.16, 11045.41, 10901.55, 10752.39, 10597.73, 10437.37, 10271.09, 10098.69, 9919.93, 9734.59, 9542.41, 9343.15, 9136.55, 8922.33, 8700.21, 8469.91, 8231.12, 7983.53, 7726.82] \n",
-      "\n",
+      "\t [12390.71, 12229.54, 12061.3, 11885.7, 11702.42, 11511.14, 11311.53, 11103.22, 12301.61, 12173.69, 12041.15, 11903.83, 11761.53, 11614.1, 11461.32, 11303.02, 11139.0, 10969.04, 10792.92, 10610.43, 10421.32, 10225.38, 10022.33, 9811.92, 9593.89, 9367.95, 9133.83, 8891.21, 8639.8, 8379.27] \n",
       "\n",
       "annual cost to own: \n",
-      "\t [52669.11, 52762.28, 52858.9, 52959.07, 53062.93, 53170.63, 53282.29, 53398.07, 53518.11, 53642.59, 53771.64, 53905.46, 54044.21, 54188.07, 54337.23, 54491.89, 54652.25, 54818.53, 54990.93, 55169.69, 55355.03, 55547.21, 55746.47, 55953.07, 56167.29, 56389.41, 56619.71, 56858.5, 57106.09, 57362.8] \n",
-      "\n",
+      "\t [52698.91, 52860.08, 53028.32, 53203.92, 53387.2, 53578.48, 53778.09, 53986.4, 52788.01, 52915.93, 53048.47, 53185.79, 53328.09, 53475.52, 53628.3, 53786.6, 53950.62, 54120.58, 54296.7, 54479.19, 54668.3, 54864.24, 55067.29, 55277.7, 55495.73, 55721.67, 55955.79, 56198.41, 56449.82, 56710.35] \n",
       "\n",
       "annual cost to own [%]: \n",
-      "\t [0.05544116842105263, 0.055539242105263155, 0.055640947368421054, 0.05574638947368421, 0.05585571578947368, 0.055969084210526314, 0.05608662105263158, 0.056208494736842106, 0.05633485263157895, 0.05646588421052631, 0.056601726315789476, 0.05674258947368421, 0.056888642105263156, 0.057040073684210525, 0.05719708421052632, 0.05735988421052632, 0.057528684210526315, 0.057703715789473684, 0.05788518947368421, 0.058073357894736846, 0.05826845263157895, 0.058470747368421054, 0.05868049473684211, 0.05889796842105263, 0.05912346315789474, 0.05935727368421053, 0.0595996947368421, 0.05985105263157895, 0.060111673684210526, 0.06038189473684211]\n"
+      "\t [5.55, 5.56, 5.58, 5.6, 5.62, 5.64, 5.66, 5.68, 5.56, 5.57, 5.58, 5.6, 5.61, 5.63, 5.65, 5.66, 5.68, 5.7, 5.72, 5.73, 5.75, 5.78, 5.8, 5.82, 5.84, 5.87, 5.89, 5.92, 5.94, 5.97] \n",
+      "\n",
+      "annual total investments: \n",
+      "\t [200000.0, 431301.09, 680213.05, 947693.65, 1234746.59, 1542423.53, 1871826.27, 2224109.02, 2600480.68, 2623592.07, 2646937.6, 2670510.76, 2694304.42, 2718310.71, 2742521.06, 2766926.11, 2791515.71, 2816278.86, 2841203.64, 2866277.18, 2891485.61, 2916813.99, 2942246.32, 2967765.37, 2993352.7, 3018988.59, 3044651.92, 3070320.18, 3095969.3, 3121573.67, 3147106.0] \n",
+      "\n",
+      "worth after analysis period:  7252951.256393135\n",
+      "net income 20 years after analysis period:  125884.24\n",
+      "\n",
+      "\n",
+      "Rental Info\n",
+      "===================\n",
+      "yearly total income:  [308000.0, 327448.0, 347904.32, 369416.5, 392034.2, 415809.3, 440795.99, 467050.88, 114602.05, 116971.12, 119387.6, 121852.32, 124366.11, 126929.82, 129544.28, 132210.37, 134928.94, 137700.86, 140527.03, 143408.31, 146345.6, 149339.81, 152391.82, 155502.55, 158672.91, 161903.8, 165196.16, 168550.88, 171968.9, 175451.13] \n",
+      "\n",
+      "annual cost to rent: \n",
+      "\t [22800.0, 23310.0, 23832.75, 24368.57, 24917.78, 25480.73, 26057.75, 26649.19, 27255.42, 27876.8, 28513.72, 29166.57, 29835.73, 30521.63, 31224.67, 31945.28, 32683.91, 33441.01, 34217.04, 35012.46, 35827.78, 36663.47, 37520.06, 38398.06, 39298.01, 40220.46, 41165.97, 42135.12, 43128.5, 44146.71, 45190.38, 46260.14, 47356.64, 48480.56, 49632.57, 50813.39, 52023.72, 53264.31, 54535.92, 55839.32, 57175.3, 58544.68, 59948.3, 61387.01, 62861.68, 64373.23, 65922.56, 67510.62, 69138.39, 70806.85] \n",
+      "\n",
+      "total rent:  2108680.7199999993\n",
+      "annual total investments: \n",
+      "\t [200000.0, 461200.0, 740858.0, 1039959.97, 1359538.91, 1700676.96, 2064507.59, 2452217.93, 2865051.16, 2924277.96, 2984690.06, 3046308.07, 3109152.84, 3173245.42, 3238607.05, 3305259.17, 3373223.42, 3442521.59, 3513175.65, 3585207.73, 3658640.11, 3733495.19, 3809795.54, 3887563.79, 3966822.7, 4047595.11, 4129903.91, 4213772.07, 4299222.55, 4386278.37, 4474962.52] \n",
+      "\n",
+      "worth after analysis period:  4474962.52\n",
+      "net income 20 years after analysis period:  [133808.12, 132738.36, 131641.86, 130517.94, 129365.93, 128185.11, 126974.78, 125734.19, 124462.58, 123159.18, 121823.2, 120453.82, 119050.2, 117611.49, 116136.82, 114625.27, 113075.94, 111487.88, 109860.11, 108191.65]\n"
      ]
     }
    ],
@@ -44,10 +65,16 @@
     "# Fixed monthly payment\n",
     "# P = L[c(1 + c)n]/[(1 + c)n - 1]\n",
     "\n",
-    "price = 950000\n",
-    "downpayment = 200000\n",
+    "\n",
+    "\n",
+    "# house\n",
+    "\n",
+    "price = 950000.0\n",
+    "downpayment = 200000.0\n",
     "interest_rate = 3.625\n",
     "yrs = 30\n",
+    "growth_rate = 0.05\n",
+    "\n",
     "\n",
     "loan_amt = price - downpayment\n",
     "monthly_interest_rate = interest_rate/12.0/100.0\n",
@@ -73,32 +100,79 @@
     "print(\"yearly interest payment:\\n\\t\", interest_paid)\n",
     "print()\n",
     "\n",
-    "# fixed expenses, monthly\n",
+    "# personal\n",
+    "starting_salary = 300000.0\n",
+    "yearly_raise_rate = 0.03\n",
+    "gross_income = [starting_salary*(1+yearly_raise_rate)**i for i in range(8)] + [0]*(yrs-8)\n",
+    "marginal_tax_rate = .33 + .0463\n",
+    "\n",
+    "return_rate = 0.04\n",
+    "starting_investments = 200000.0\n",
+    "inflation = 0.02\n",
+    "yearly_living_expenses = [2000*12*(1+inflation)**i for i in range(yrs)]\n",
+    "\n",
+    "\n",
+    "# buying expenses, monthly\n",
     "\n",
     "insurance = 165.0\n",
     "utilities = 200.0\n",
-    "property_tax = 0.57/100/12*price\n",
-    "maintenance = 0.015*price/12\n",
+    "property_tax = 0.57/100.0/12.0*price\n",
+    "maintenance = 0.015*price/12.0\n",
     "costs_monthly = P + insurance + utilities + property_tax + maintenance\n",
     "\n",
-    "# tax deductions, monthly\n",
-    "\n",
-    "marginal_tax_rate = .33 + .0463\n",
-    "tax_savings = []\n",
-    "for i in range(yrs):\n",
-    "    tax_deduction = interest_paid[i] - (300000-166700)*.03*.33\n",
-    "    tax_savings.append(round(tax_deduction * marginal_tax_rate, 2))\n",
-    "\n",
-    "# total annual costs\n",
-    "annual_cost_to_own = []\n",
-    "for i in range(yrs):\n",
-    "    annual_cost_to_own.append(round(costs_monthly*12 - tax_savings[i],2))\n",
     "    \n",
-    "print(\"Costs Info\\n===================\")\n",
+    "# income, investments and tax deductions\n",
+    "buying_total_investments = [starting_investments]\n",
+    "buying_total_income = []\n",
+    "tax_savings = []\n",
+    "annual_cost_to_own = []\n",
+    "\n",
+    "for i in range(yrs):\n",
+    "    investment_return = buying_total_investments[-1]*((1+return_rate)-1)\n",
+    "    \n",
+    "    income = round(gross_income[i]+investment_return,2)\n",
+    "    buying_total_income.append(income)\n",
+    "    tax_deduction = interest_paid[i] - (income-166700.0)*.03*.33\n",
+    "    tax_savings.append(round(tax_deduction*marginal_tax_rate,2))\n",
+    "    \n",
+    "    annual_cost_to_own.append(round(costs_monthly*12 - tax_savings[-1],2))\n",
+    "    \n",
+    "    buying_total_investments.append( round(buying_total_investments[-1] + income - yearly_living_expenses[i] - annual_cost_to_own[-1],2))\n",
+    "        \n",
+    "print(\"Buying Info\\n===================\")\n",
+    "print(\"yearly total income: \", buying_total_income, \"\\n\")\n",
     "print(\"yearly cost to own: \", costs_monthly*12)\n",
-    "print(\"yearly tax savings: \\n\\t\", tax_savings,\"\\n\\n\")\n",
-    "print(\"annual cost to own: \\n\\t\", annual_cost_to_own,\"\\n\\n\")\n",
-    "print(\"annual cost to own [%]: \\n\\t\", [i/price for i in annual_cost_to_own])"
+    "print(\"yearly tax savings: \\n\\t\", tax_savings,\"\\n\")\n",
+    "print(\"annual cost to own: \\n\\t\", annual_cost_to_own,\"\\n\")\n",
+    "print(\"annual cost to own [%]: \\n\\t\", [round(i/price*100,2) for i in annual_cost_to_own],\"\\n\")\n",
+    "print(\"annual total investments: \\n\\t\", buying_total_investments, \"\\n\")\n",
+    "print(\"worth after analysis period: \", buying_total_investments[-1] + price*(1+growth_rate)**yrs)\n",
+    "print(\"net income 20 years after analysis period: \", buying_total_investments[-1]*return_rate)\n",
+    "\n",
+    "print(\"\\n\\nRental Info\\n===================\")\n",
+    "rent = 1700\n",
+    "rent_rate = 0.025\n",
+    "annual_rents = [round((rent*(1+rent_rate)**i + 200)*12,2) for i in range(yrs+20)]\n",
+    "\n",
+    "renting_total_investments = [starting_investments]\n",
+    "renting_total_income = []\n",
+    "for i in range(yrs):\n",
+    "    investment_return = renting_total_investments[-1]*((1+return_rate)-1)\n",
+    "    \n",
+    "    income = round(gross_income[i]+investment_return, 2)\n",
+    "    renting_total_income.append(income)\n",
+    "    renting_total_investments.append(round(renting_total_investments[-1] + income - yearly_living_expenses[i] - annual_rents[i], 2))\n",
+    "\n",
+    "retirement_funds_yearly = []\n",
+    "for i in range(20):\n",
+    "    retirement_funds_yearly.append(round(renting_total_investments[-1]*return_rate - annual_rents[30+i], 2))\n",
+    "    \n",
+    "print(\"yearly total income: \", renting_total_income, \"\\n\")\n",
+    "print(\"annual cost to rent: \\n\\t\", annual_rents,\"\\n\")\n",
+    "print(\"total rent: \", sum(annual_rents))\n",
+    "print(\"annual total investments: \\n\\t\", renting_total_investments, \"\\n\")\n",
+    "print(\"worth after analysis period: \", renting_total_investments[-1] )\n",
+    "print(\"net income 20 years after analysis period: \", retirement_funds_yearly)\n"
    ]
   },
   {
