--- a/real_estate.ipynb
+++ b/real_estate.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -24,11 +24,21 @@
       "yearly interest payment:\n",
       "\t [34326.61, 34079.0, 33822.26, 33556.05, 33280.04, 32993.85, 32697.11, 32389.43, 32070.42, 31739.64, 31396.67, 31041.07, 30672.35, 30290.05, 29893.65, 29482.64, 29056.49, 28614.63, 28156.48, 27681.44, 27188.89, 26678.2, 26148.67, 25599.63, 25030.35, 24440.09, 23828.08, 23193.5, 22535.54, 21853.33]\n",
       "\n",
+      "\n",
+      "Personal Info\n",
+      "===================\n",
+      "direct income: \n",
+      "\t [300000.0, 309000.0, 318270.0, 327818.1, 337652.64, 347782.22, 358215.69, 368962.16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] \n",
+      "\n",
+      "yearly living expenses: \n",
+      "\t [24000.0, 24480.0, 24969.6, 25468.99, 25978.37, 26497.94, 27027.9, 27568.46, 28119.83, 28682.22, 29255.87, 29840.98, 30437.8, 31046.56, 31667.49, 32300.84, 32946.86, 33605.79, 34277.91, 34963.47, 35662.74, 36375.99, 37103.51, 37845.58, 38602.49, 39374.54, 40162.03, 40965.28, 41784.58, 42620.27] \n",
+      "\n",
+      "\n",
+      "\n",
       "Buying Info\n",
       "===================\n",
-      "yearly total income:  [308000.0, 326252.04, 345478.52, 365725.85, 387042.51, 409479.16, 433088.74, 457926.52, 104019.23, 104943.68, 105877.5, 106820.43, 107772.18, 108732.43, 109700.84, 110677.04, 111660.63, 112651.15, 113648.15, 114651.09, 115659.42, 116672.56, 117689.85, 118710.61, 119734.11, 120759.54, 121786.08, 122812.81, 123838.77, 124862.95] \n",
+      "yearly total income:  [308000.0, 326252.04, 345478.52, 365725.85, 387042.5, 409479.16, 433088.74, 457926.52, 104019.23, 104943.68, 105877.5, 106820.43, 107772.18, 108732.43, 109700.84, 110677.04, 111660.63, 112651.15, 113648.15, 114651.09, 115659.42, 116672.56, 117689.85, 118710.61, 119734.11, 120759.54, 121786.08, 122812.81, 123838.77, 124862.95] \n",
       "\n",
-      "yearly cost to own:  65089.61718199619\n",
       "yearly tax savings: \n",
       "\t [12390.71, 12229.54, 12061.3, 11885.7, 11702.42, 11511.14, 11311.53, 11103.22, 12301.61, 12173.69, 12041.15, 11903.83, 11761.53, 11614.1, 11461.32, 11303.02, 11139.0, 10969.04, 10792.92, 10610.43, 10421.32, 10225.38, 10022.33, 9811.92, 9593.89, 9367.95, 9133.83, 8891.21, 8639.8, 8379.27] \n",
       "\n",
@@ -39,25 +49,33 @@
       "\t [5.55, 5.56, 5.58, 5.6, 5.62, 5.64, 5.66, 5.68, 5.56, 5.57, 5.58, 5.6, 5.61, 5.63, 5.65, 5.66, 5.68, 5.7, 5.72, 5.73, 5.75, 5.78, 5.8, 5.82, 5.84, 5.87, 5.89, 5.92, 5.94, 5.97] \n",
       "\n",
       "annual total investments: \n",
-      "\t [200000.0, 431301.09, 680213.05, 947693.65, 1234746.59, 1542423.53, 1871826.27, 2224109.02, 2600480.68, 2623592.07, 2646937.6, 2670510.76, 2694304.42, 2718310.71, 2742521.06, 2766926.11, 2791515.71, 2816278.86, 2841203.64, 2866277.18, 2891485.61, 2916813.99, 2942246.32, 2967765.37, 2993352.7, 3018988.59, 3044651.92, 3070320.18, 3095969.3, 3121573.67, 3147106.0] \n",
+      "\t [200000.0, 431301.09, 680213.05, 947693.65, 1234746.59, 1542423.52, 1871826.26, 2224109.01, 2600480.67, 2623592.06, 2646937.59, 2670510.75, 2694304.41, 2718310.7, 2742521.05, 2766926.1, 2791515.7, 2816278.85, 2841203.63, 2866277.17, 2891485.6, 2916813.98, 2942246.31, 2967765.36, 2993352.69, 3018988.58, 3044651.91, 3070320.17, 3095969.29, 3121573.66, 3147105.99] \n",
       "\n",
-      "worth after analysis period:  7252951.256393135\n",
-      "net income 20 years after analysis period:  125884.24\n",
+      "worth after analysis period:  5453005.34 \n",
+      "\n",
+      "net income 20 years after analysis period:  125884.24 \n",
+      "\n",
+      "today's equivalent:  69497.02 \n",
+      "\n",
       "\n",
       "\n",
       "Rental Info\n",
       "===================\n",
-      "yearly total income:  [308000.0, 327448.0, 347904.32, 369416.5, 392034.2, 415809.3, 440795.99, 467050.88, 114602.05, 116971.12, 119387.6, 121852.32, 124366.11, 126929.82, 129544.28, 132210.37, 134928.94, 137700.86, 140527.03, 143408.31, 146345.6, 149339.81, 152391.82, 155502.55, 158672.91, 161903.8, 165196.16, 168550.88, 171968.9, 175451.13] \n",
+      "yearly total income:  [308000.0, 327352.0, 347706.08, 369109.47, 391611.5, 415263.73, 440119.99, 466236.5, 113640.98, 115854.64, 118106.58, 120397.17, 122726.79, 125095.81, 127504.58, 129953.43, 132442.69, 134972.65, 137543.61, 140155.83, 142809.56, 145505.01, 148242.39, 151021.88, 153843.6, 156707.69, 159614.22, 162563.24, 165554.76, 168588.77] \n",
       "\n",
       "annual cost to rent: \n",
-      "\t [22800.0, 23310.0, 23832.75, 24368.57, 24917.78, 25480.73, 26057.75, 26649.19, 27255.42, 27876.8, 28513.72, 29166.57, 29835.73, 30521.63, 31224.67, 31945.28, 32683.91, 33441.01, 34217.04, 35012.46, 35827.78, 36663.47, 37520.06, 38398.06, 39298.01, 40220.46, 41165.97, 42135.12, 43128.5, 44146.71, 45190.38, 46260.14, 47356.64, 48480.56, 49632.57, 50813.39, 52023.72, 53264.31, 54535.92, 55839.32, 57175.3, 58544.68, 59948.3, 61387.01, 62861.68, 64373.23, 65922.56, 67510.62, 69138.39, 70806.85] \n",
+      "\t [25200.0, 25770.0, 26354.25, 26953.11, 27566.93, 28196.11, 28841.01, 29502.04, 30179.59, 30874.08, 31585.93, 32315.58, 33063.47, 33830.05, 34615.8, 35421.2, 36246.73, 37092.9, 37960.22, 38849.22, 39760.45, 40694.47, 41651.83, 42633.12, 43638.95, 44669.93, 45726.67, 46809.84, 47920.09, 49058.09, 50224.54, 51420.15, 52645.66, 53901.8, 55189.34, 56509.08, 57861.81, 59248.35, 60669.56, 62126.3, 63619.46, 65149.94, 66718.69, 68326.66, 69974.82, 71664.19, 73395.8, 75170.69, 76989.96, 78854.71] \n",
       "\n",
-      "total rent:  2108680.7199999993\n",
+      "total rent:  2342643.17 \n",
+      "\n",
       "annual total investments: \n",
-      "\t [200000.0, 461200.0, 740858.0, 1039959.97, 1359538.91, 1700676.96, 2064507.59, 2452217.93, 2865051.16, 2924277.96, 2984690.06, 3046308.07, 3109152.84, 3173245.42, 3238607.05, 3305259.17, 3373223.42, 3442521.59, 3513175.65, 3585207.73, 3658640.11, 3733495.19, 3809795.54, 3887563.79, 3966822.7, 4047595.11, 4129903.91, 4213772.07, 4299222.55, 4386278.37, 4474962.52] \n",
+      "\t [200000.0, 458800.0, 735902.0, 1032284.23, 1348971.6, 1687037.8, 2047607.48, 2431858.56, 2841024.56, 2896366.12, 2952664.46, 3009929.24, 3068169.85, 3127395.37, 3187614.57, 3248835.86, 3311067.25, 3374316.35, 3438590.31, 3503895.79, 3570238.93, 3637625.3, 3706059.85, 3775546.9, 3846090.08, 3917692.24, 3990355.46, 4064080.98, 4138869.1, 4214719.19, 4291629.6] \n",
       "\n",
-      "worth after analysis period:  4474962.52\n",
-      "net income 20 years after analysis period:  [133808.12, 132738.36, 131641.86, 130517.94, 129365.93, 128185.11, 126974.78, 125734.19, 124462.58, 123159.18, 121823.2, 120453.82, 119050.2, 117611.49, 116136.82, 114625.27, 113075.94, 111487.88, 109860.11, 108191.65]\n"
+      "worth after analysis period:  4291629.6 \n",
+      "\n",
+      "net income 20 years after analysis period:  [121440.64, 120245.03, 119019.52, 117763.38, 116475.84, 115156.1, 113803.37, 112416.83, 110995.62, 109538.88, 108045.72, 106515.24, 104946.49, 103338.52, 101690.36, 100000.99, 98269.38, 96494.49, 94675.22, 92810.47] \n",
+      "\n",
+      "today's equivalent:  [67043.84, 65082.14, 63155.72, 61263.89, 59405.96, 57581.23, 55789.05, 54028.76, 52299.71, 50601.29, 48932.87, 47293.85, 45683.64, 44101.65, 42547.32, 41020.09, 39519.4, 38044.72, 36595.53, 35171.31]\n"
      ]
     }
    ],
@@ -73,7 +91,7 @@
     "downpayment = 200000.0\n",
     "interest_rate = 3.625\n",
     "yrs = 30\n",
-    "growth_rate = 0.05\n",
+    "growth_rate = 0.03\n",
     "\n",
     "\n",
     "loan_amt = price - downpayment\n",
@@ -98,19 +116,21 @@
     "print(\"total interest: \", total_interest)\n",
     "print(\"monthly payment: \", P)\n",
     "print(\"yearly interest payment:\\n\\t\", interest_paid)\n",
-    "print()\n",
     "\n",
     "# personal\n",
     "starting_salary = 300000.0\n",
     "yearly_raise_rate = 0.03\n",
-    "gross_income = [starting_salary*(1+yearly_raise_rate)**i for i in range(8)] + [0]*(yrs-8)\n",
+    "gross_income = [round(starting_salary*(1+yearly_raise_rate)**i,2) for i in range(8)] + [0]*(yrs-8)\n",
     "marginal_tax_rate = .33 + .0463\n",
     "\n",
     "return_rate = 0.04\n",
     "starting_investments = 200000.0\n",
     "inflation = 0.02\n",
-    "yearly_living_expenses = [2000*12*(1+inflation)**i for i in range(yrs)]\n",
+    "yearly_living_expenses = [round(2000.0*12.0*(1+inflation)**i,2) for i in range(yrs)]\n",
     "\n",
+    "print(\"\\n\\nPersonal Info\\n===================\")\n",
+    "print(\"direct income: \\n\\t\", gross_income, \"\\n\")\n",
+    "print(\"yearly living expenses: \\n\\t\", yearly_living_expenses, \"\\n\")\n",
     "\n",
     "# buying expenses, monthly\n",
     "\n",
@@ -139,18 +159,18 @@
     "    \n",
     "    buying_total_investments.append( round(buying_total_investments[-1] + income - yearly_living_expenses[i] - annual_cost_to_own[-1],2))\n",
     "        \n",
-    "print(\"Buying Info\\n===================\")\n",
+    "print(\"\\n\\nBuying Info\\n===================\")\n",
     "print(\"yearly total income: \", buying_total_income, \"\\n\")\n",
-    "print(\"yearly cost to own: \", costs_monthly*12)\n",
     "print(\"yearly tax savings: \\n\\t\", tax_savings,\"\\n\")\n",
     "print(\"annual cost to own: \\n\\t\", annual_cost_to_own,\"\\n\")\n",
     "print(\"annual cost to own [%]: \\n\\t\", [round(i/price*100,2) for i in annual_cost_to_own],\"\\n\")\n",
     "print(\"annual total investments: \\n\\t\", buying_total_investments, \"\\n\")\n",
-    "print(\"worth after analysis period: \", buying_total_investments[-1] + price*(1+growth_rate)**yrs)\n",
-    "print(\"net income 20 years after analysis period: \", buying_total_investments[-1]*return_rate)\n",
+    "print(\"worth after analysis period: \", round(buying_total_investments[-1] + price*(1+growth_rate)**yrs,2),\"\\n\")\n",
+    "print(\"net income 20 years after analysis period: \", round(buying_total_investments[-1]*return_rate,2),\"\\n\")\n",
+    "print(\"today's equivalent: \", round((buying_total_investments[-1]*return_rate)/(1+inflation)**yrs,2),\"\\n\")\n",
     "\n",
     "print(\"\\n\\nRental Info\\n===================\")\n",
-    "rent = 1700\n",
+    "rent = 1700 + 200\n",
     "rent_rate = 0.025\n",
     "annual_rents = [round((rent*(1+rent_rate)**i + 200)*12,2) for i in range(yrs+20)]\n",
     "\n",
@@ -169,10 +189,11 @@
     "    \n",
     "print(\"yearly total income: \", renting_total_income, \"\\n\")\n",
     "print(\"annual cost to rent: \\n\\t\", annual_rents,\"\\n\")\n",
-    "print(\"total rent: \", sum(annual_rents))\n",
+    "print(\"total rent: \", sum(annual_rents),\"\\n\")\n",
     "print(\"annual total investments: \\n\\t\", renting_total_investments, \"\\n\")\n",
-    "print(\"worth after analysis period: \", renting_total_investments[-1] )\n",
-    "print(\"net income 20 years after analysis period: \", retirement_funds_yearly)\n"
+    "print(\"worth after analysis period: \", renting_total_investments[-1] , \"\\n\")\n",
+    "print(\"net income 20 years after analysis period: \", retirement_funds_yearly,\"\\n\")\n",
+    "print(\"today's equivalent: \", [round(retirement_funds_yearly[i]/(1+inflation)**(yrs+i), 2) for i in range(20)])\n"
    ]
   },
   {
