--- a/real_estate.ipynb
+++ b/real_estate.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +25,17 @@
       "\t [34326.61, 34079.0, 33822.26, 33556.05, 33280.04, 32993.85, 32697.11, 32389.43, 32070.42, 31739.64, 31396.67, 31041.07, 30672.35, 30290.05, 29893.65, 29482.64, 29056.49, 28614.63, 28156.48, 27681.44, 27188.89, 26678.2, 26148.67, 25599.63, 25030.35, 24440.09, 23828.08, 23193.5, 22535.54, 21853.33]\n",
       "\n",
       "\n",
+      "Assuming retirement after 8 years\n",
+      "\n",
+      "Paying mortgage payment by payment\n",
+      "\n",
+      "Not calculating 401k investments\n",
+      "\n",
+      "\n",
       "Personal Info\n",
       "===================\n",
       "direct income: \n",
-      "\t [300000.0, 309000.0, 318270.0, 327818.1, 337652.64, 347782.22, 358215.69, 368962.16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] \n",
+      "\t [300000.0, 309000.0, 318270.0, 327818.1, 337652.64, 347782.22, 358215.69, 368962.16, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0] \n",
       "\n",
       "yearly living expenses: \n",
       "\t [24000.0, 24480.0, 24969.6, 25468.99, 25978.37, 26497.94, 27027.9, 27568.46, 28119.83, 28682.22, 29255.87, 29840.98, 30437.8, 31046.56, 31667.49, 32300.84, 32946.86, 33605.79, 34277.91, 34963.47, 35662.74, 36375.99, 37103.51, 37845.58, 38602.49, 39374.54, 40162.03, 40965.28, 41784.58, 42620.27] \n",
@@ -37,31 +44,31 @@
       "\n",
       "Buying Info\n",
       "===================\n",
-      "yearly total income:  [308000.0, 326252.04, 345478.52, 365725.85, 387042.5, 409479.16, 433088.74, 457926.52, 104019.23, 104943.68, 105877.5, 106820.43, 107772.18, 108732.43, 109700.84, 110677.04, 111660.63, 112651.15, 113648.15, 114651.09, 115659.42, 116672.56, 117689.85, 118710.61, 119734.11, 120759.54, 121786.08, 122812.81, 123838.77, 124862.95] \n",
+      "yearly total income:  [302000.0, 320012.94, 338990.78, 358979.56, 380027.37, 402184.47, 425503.35, 450038.85, 95817.22, 96414.82, 97008.75, 97598.25, 98182.49, 98760.58, 99331.61, 99894.58, 100448.48, 100992.19, 101524.56, 102044.36, 102550.31, 103041.03, 103515.1, 103970.98, 104407.08, 104821.72, 105213.12, 105579.4, 105918.6, 106228.63] \n",
       "\n",
       "yearly tax savings: \n",
-      "\t [12390.71, 12229.54, 12061.3, 11885.7, 11702.42, 11511.14, 11311.53, 11103.22, 12301.61, 12173.69, 12041.15, 11903.83, 11761.53, 11614.1, 11461.32, 11303.02, 11139.0, 10969.04, 10792.92, 10610.43, 10421.32, 10225.38, 10022.33, 9811.92, 9593.89, 9367.95, 9133.83, 8891.21, 8639.8, 8379.27] \n",
+      "\t [12413.06, 12252.78, 12085.47, 11910.83, 11728.56, 11538.32, 11339.78, 11132.6, 12332.16, 12205.46, 12074.19, 11938.18, 11797.26, 11651.25, 11499.95, 11343.19, 11180.77, 11012.47, 10838.09, 10657.39, 10470.16, 10276.16, 10075.13, 9866.83, 9650.98, 9427.33, 9195.57, 8955.41, 8706.56, 8448.69] \n",
       "\n",
       "annual cost to own: \n",
-      "\t [52698.91, 52860.08, 53028.32, 53203.92, 53387.2, 53578.48, 53778.09, 53986.4, 52788.01, 52915.93, 53048.47, 53185.79, 53328.09, 53475.52, 53628.3, 53786.6, 53950.62, 54120.58, 54296.7, 54479.19, 54668.3, 54864.24, 55067.29, 55277.7, 55495.73, 55721.67, 55955.79, 56198.41, 56449.82, 56710.35] \n",
+      "\t [52676.56, 52836.84, 53004.15, 53178.79, 53361.06, 53551.3, 53749.84, 53957.02, 52757.46, 52884.16, 53015.43, 53151.44, 53292.36, 53438.37, 53589.67, 53746.43, 53908.85, 54077.15, 54251.53, 54432.23, 54619.46, 54813.46, 55014.49, 55222.79, 55438.64, 55662.29, 55894.05, 56134.21, 56383.06, 56640.93] \n",
       "\n",
       "annual cost to own [%]: \n",
-      "\t [5.55, 5.56, 5.58, 5.6, 5.62, 5.64, 5.66, 5.68, 5.56, 5.57, 5.58, 5.6, 5.61, 5.63, 5.65, 5.66, 5.68, 5.7, 5.72, 5.73, 5.75, 5.78, 5.8, 5.82, 5.84, 5.87, 5.89, 5.92, 5.94, 5.97] \n",
+      "\t [5.54, 5.56, 5.58, 5.6, 5.62, 5.64, 5.66, 5.68, 5.55, 5.57, 5.58, 5.59, 5.61, 5.63, 5.64, 5.66, 5.67, 5.69, 5.71, 5.73, 5.75, 5.77, 5.79, 5.81, 5.84, 5.86, 5.88, 5.91, 5.94, 5.96] \n",
       "\n",
       "annual total investments: \n",
-      "\t [200000.0, 431301.09, 680213.05, 947693.65, 1234746.59, 1542423.52, 1871826.26, 2224109.01, 2600480.67, 2623592.06, 2646937.59, 2670510.75, 2694304.41, 2718310.7, 2742521.05, 2766926.1, 2791515.7, 2816278.85, 2841203.63, 2866277.17, 2891485.6, 2916813.98, 2942246.31, 2967765.36, 2993352.69, 3018988.58, 3044651.91, 3070320.17, 3095969.29, 3121573.66, 3147105.99] \n",
+      "\t [50000.0, 275323.44, 518019.54, 779036.57, 1059368.35, 1360056.29, 1682191.52, 2026917.13, 2395430.5, 2410370.43, 2425218.87, 2439956.32, 2454562.15, 2469014.48, 2483290.13, 2497364.58, 2511211.89, 2524804.66, 2538113.91, 2551109.03, 2563757.69, 2576025.8, 2587877.38, 2599274.48, 2610177.09, 2620543.04, 2630327.93, 2639484.97, 2647964.88, 2655715.84, 2662683.27] \n",
       "\n",
-      "worth after analysis period:  5453005.34 \n",
+      "worth after analysis period:  4968582.62 \n",
       "\n",
-      "net income 20 years after analysis period:  125884.24 \n",
+      "net income 20 years after analysis period:  106507.33 \n",
       "\n",
-      "today's equivalent:  69497.02 \n",
+      "today's equivalent:  58799.6 \n",
       "\n",
       "\n",
       "\n",
       "Rental Info\n",
       "===================\n",
-      "yearly total income:  [308000.0, 327352.0, 347706.08, 369109.47, 391611.5, 415263.73, 440119.99, 466236.5, 113640.98, 115854.64, 118106.58, 120397.17, 122726.79, 125095.81, 127504.58, 129953.43, 132442.69, 134972.65, 137543.61, 140155.83, 142809.56, 145505.01, 148242.39, 151021.88, 153843.6, 156707.69, 159614.22, 162563.24, 165554.76, 168588.77] \n",
+      "yearly total income:  [310000.0, 329432.0, 349869.28, 371359.2, 393951.22, 417697.04, 442650.63, 468868.37, 116378.12, 118701.27, 121067.07, 123476.08, 125928.86, 128425.96, 130967.94, 133555.32, 136188.65, 138868.46, 141595.25, 144369.53, 147191.81, 150062.55, 152982.23, 155951.31, 158970.21, 162039.37, 165159.16, 168329.98, 171552.17, 174826.07] \n",
       "\n",
       "annual cost to rent: \n",
       "\t [25200.0, 25770.0, 26354.25, 26953.11, 27566.93, 28196.11, 28841.01, 29502.04, 30179.59, 30874.08, 31585.93, 32315.58, 33063.47, 33830.05, 34615.8, 35421.2, 36246.73, 37092.9, 37960.22, 38849.22, 39760.45, 40694.47, 41651.83, 42633.12, 43638.95, 44669.93, 45726.67, 46809.84, 47920.09, 49058.09, 50224.54, 51420.15, 52645.66, 53901.8, 55189.34, 56509.08, 57861.81, 59248.35, 60669.56, 62126.3, 63619.46, 65149.94, 66718.69, 68326.66, 69974.82, 71664.19, 73395.8, 75170.69, 76989.96, 78854.71] \n",
@@ -69,20 +76,19 @@
       "total rent:  2342643.17 \n",
       "\n",
       "annual total investments: \n",
-      "\t [200000.0, 458800.0, 735902.0, 1032284.23, 1348971.6, 1687037.8, 2047607.48, 2431858.56, 2841024.56, 2896366.12, 2952664.46, 3009929.24, 3068169.85, 3127395.37, 3187614.57, 3248835.86, 3311067.25, 3374316.35, 3438590.31, 3503895.79, 3570238.93, 3637625.3, 3706059.85, 3775546.9, 3846090.08, 3917692.24, 3990355.46, 4064080.98, 4138869.1, 4214719.19, 4291629.6] \n",
+      "\t [250000, 510800.0, 789982.0, 1088527.43, 1407464.53, 1747870.45, 2110873.44, 2497655.16, 2909453.03, 2967531.73, 3026676.7, 3086901.97, 3148221.49, 3210649.08, 3274198.43, 3338883.08, 3404716.36, 3471711.42, 3539881.19, 3609238.31, 3679795.15, 3751563.77, 3824555.86, 3898782.75, 3974255.36, 4050984.13, 4128979.03, 4208249.49, 4288804.35, 4370651.85, 4453799.56] \n",
       "\n",
-      "worth after analysis period:  4291629.6 \n",
+      "worth after analysis period:  4453799.56 \n",
       "\n",
-      "net income 20 years after analysis period:  [121440.64, 120245.03, 119019.52, 117763.38, 116475.84, 115156.1, 113803.37, 112416.83, 110995.62, 109538.88, 108045.72, 106515.24, 104946.49, 103338.52, 101690.36, 100000.99, 98269.38, 96494.49, 94675.22, 92810.47] \n",
+      "net income 20 years after analysis period:  [127927.44, 126731.83, 125506.32, 124250.18, 122962.64, 121642.9, 120290.17, 118903.63, 117482.42, 116025.68, 114532.52, 113002.04, 111433.29, 109825.32, 108177.16, 106487.79, 104756.18, 102981.29, 101162.02, 99297.27] \n",
       "\n",
-      "today's equivalent:  [67043.84, 65082.14, 63155.72, 61263.89, 59405.96, 57581.23, 55789.05, 54028.76, 52299.71, 50601.29, 48932.87, 47293.85, 45683.64, 44101.65, 42547.32, 41020.09, 39519.4, 38044.72, 36595.53, 35171.31]\n"
+      "today's equivalent:  [70625.02, 68593.09, 66597.83, 64638.51, 62714.41, 60824.81, 58969.03, 57146.38, 55356.21, 53597.86, 51870.68, 50174.06, 48507.37, 46870.01, 45261.4, 43680.95, 42128.09, 40602.26, 39102.93, 37629.54]\n"
      ]
     }
    ],
    "source": [
     "# Fixed monthly payment\n",
     "# P = L[c(1 + c)n]/[(1 + c)n - 1]\n",
-    "\n",
     "\n",
     "\n",
     "# house\n",
@@ -93,12 +99,12 @@
     "yrs = 30\n",
     "growth_rate = 0.03\n",
     "\n",
-    "\n",
     "loan_amt = price - downpayment\n",
-    "monthly_interest_rate = interest_rate/12.0/100.0\n",
-    "n_months = yrs*12.0\n",
-    "P = loan_amt*monthly_interest_rate*(1+monthly_interest_rate)**n_months/((1+monthly_interest_rate)**n_months-1)\n",
-    "total_interest = P*n_months-loan_amt\n",
+    "monthly_interest_rate = interest_rate / 12.0 / 100.0\n",
+    "n_months = yrs * 12.0\n",
+    "P = loan_amt * monthly_interest_rate * (1 + monthly_interest_rate) ** n_months / (\n",
+    "            (1 + monthly_interest_rate) ** n_months - 1)\n",
+    "total_interest = P * n_months - loan_amt\n",
     "\n",
     "# interest vs principal payment schedule\n",
     "interest_paid = []\n",
@@ -106,10 +112,10 @@
     "for i in range(yrs):\n",
     "    paid = 0\n",
     "    for m in range(12):\n",
-    "        interest_payment = monthly_interest_rate*remaining_principal\n",
+    "        interest_payment = monthly_interest_rate * remaining_principal\n",
     "        paid += interest_payment\n",
     "        remaining_principal -= (P - interest_payment)\n",
-    "    interest_paid.append(round(paid,2))\n",
+    "    interest_paid.append(round(paid, 2))\n",
     "\n",
     "print(\"Mortgage Info\\n===================\")\n",
     "print(\"loan amount: \", loan_amt)\n",
@@ -117,16 +123,21 @@
     "print(\"monthly payment: \", P)\n",
     "print(\"yearly interest payment:\\n\\t\", interest_paid)\n",
     "\n",
+    "print(\"\\n\\nAssuming retirement after 8 years\\n\")\n",
+    "print(\"Paying mortgage payment by payment\\n\")\n",
+    "print(\"Not calculating 401k investments\")\n",
+    "\n",
     "# personal\n",
     "starting_salary = 300000.0\n",
     "yearly_raise_rate = 0.03\n",
-    "gross_income = [round(starting_salary*(1+yearly_raise_rate)**i,2) for i in range(8)] + [0]*(yrs-8)\n",
+    "gross_income = [round(starting_salary * (1 + yearly_raise_rate) ** i, 2) for i in range(8)] + [\n",
+    "    0 * (1 + yearly_raise_rate) ** 8] * (yrs - 8)\n",
     "marginal_tax_rate = .33 + .0463\n",
     "\n",
     "return_rate = 0.04\n",
-    "starting_investments = 200000.0\n",
+    "starting_investments = 250000\n",
     "inflation = 0.02\n",
-    "yearly_living_expenses = [round(2000.0*12.0*(1+inflation)**i,2) for i in range(yrs)]\n",
+    "yearly_living_expenses = [round(2000.0 * 12.0 * (1 + inflation) ** i, 2) for i in range(yrs)]\n",
     "\n",
     "print(\"\\n\\nPersonal Info\\n===================\")\n",
     "print(\"direct income: \\n\\t\", gross_income, \"\\n\")\n",
@@ -136,64 +147,65 @@
     "\n",
     "insurance = 165.0\n",
     "utilities = 200.0\n",
-    "property_tax = 0.57/100.0/12.0*price\n",
-    "maintenance = 0.015*price/12.0\n",
+    "property_tax = 0.57 / 100.0 / 12.0 * price\n",
+    "maintenance = 0.015 * price / 12.0\n",
     "costs_monthly = P + insurance + utilities + property_tax + maintenance\n",
     "\n",
-    "    \n",
     "# income, investments and tax deductions\n",
-    "buying_total_investments = [starting_investments]\n",
+    "buying_total_investments = [starting_investments-downpayment]\n",
     "buying_total_income = []\n",
     "tax_savings = []\n",
     "annual_cost_to_own = []\n",
     "\n",
     "for i in range(yrs):\n",
-    "    investment_return = buying_total_investments[-1]*((1+return_rate)-1)\n",
-    "    \n",
-    "    income = round(gross_income[i]+investment_return,2)\n",
+    "    investment_return = buying_total_investments[-1] * ((1 + return_rate) - 1)\n",
+    "\n",
+    "    income = round(gross_income[i] + investment_return, 2)\n",
     "    buying_total_income.append(income)\n",
-    "    tax_deduction = interest_paid[i] - (income-166700.0)*.03*.33\n",
-    "    tax_savings.append(round(tax_deduction*marginal_tax_rate,2))\n",
-    "    \n",
-    "    annual_cost_to_own.append(round(costs_monthly*12 - tax_savings[-1],2))\n",
-    "    \n",
-    "    buying_total_investments.append( round(buying_total_investments[-1] + income - yearly_living_expenses[i] - annual_cost_to_own[-1],2))\n",
-    "        \n",
+    "    tax_deduction = interest_paid[i] - (income - 166700.0) * .03 * .33\n",
+    "    tax_savings.append(round(tax_deduction * marginal_tax_rate, 2))\n",
+    "\n",
+    "    annual_cost_to_own.append(round(costs_monthly * 12 - tax_savings[-1], 2))\n",
+    "\n",
+    "    buying_total_investments.append(\n",
+    "        round(buying_total_investments[-1] + income - yearly_living_expenses[i] - annual_cost_to_own[-1], 2))\n",
+    "\n",
     "print(\"\\n\\nBuying Info\\n===================\")\n",
     "print(\"yearly total income: \", buying_total_income, \"\\n\")\n",
-    "print(\"yearly tax savings: \\n\\t\", tax_savings,\"\\n\")\n",
-    "print(\"annual cost to own: \\n\\t\", annual_cost_to_own,\"\\n\")\n",
-    "print(\"annual cost to own [%]: \\n\\t\", [round(i/price*100,2) for i in annual_cost_to_own],\"\\n\")\n",
+    "print(\"yearly tax savings: \\n\\t\", tax_savings, \"\\n\")\n",
+    "print(\"annual cost to own: \\n\\t\", annual_cost_to_own, \"\\n\")\n",
+    "print(\"annual cost to own [%]: \\n\\t\", [round(i / price * 100, 2) for i in annual_cost_to_own], \"\\n\")\n",
     "print(\"annual total investments: \\n\\t\", buying_total_investments, \"\\n\")\n",
-    "print(\"worth after analysis period: \", round(buying_total_investments[-1] + price*(1+growth_rate)**yrs,2),\"\\n\")\n",
-    "print(\"net income 20 years after analysis period: \", round(buying_total_investments[-1]*return_rate,2),\"\\n\")\n",
-    "print(\"today's equivalent: \", round((buying_total_investments[-1]*return_rate)/(1+inflation)**yrs,2),\"\\n\")\n",
+    "print(\"worth after analysis period: \", round(buying_total_investments[-1] + price * (1 + growth_rate) ** yrs, 2), \"\\n\")\n",
+    "print(\"net income 20 years after analysis period: \", round(buying_total_investments[-1] * return_rate, 2), \"\\n\")\n",
+    "print(\"today's equivalent: \", round((buying_total_investments[-1] * return_rate) / (1 + inflation) ** yrs, 2), \"\\n\")\n",
     "\n",
     "print(\"\\n\\nRental Info\\n===================\")\n",
     "rent = 1700 + 200\n",
     "rent_rate = 0.025\n",
-    "annual_rents = [round((rent*(1+rent_rate)**i + 200)*12,2) for i in range(yrs+20)]\n",
+    "annual_rents = [round((rent * (1 + rent_rate) ** i + 200) * 12, 2) for i in range(yrs + 20)]\n",
     "\n",
     "renting_total_investments = [starting_investments]\n",
     "renting_total_income = []\n",
     "for i in range(yrs):\n",
-    "    investment_return = renting_total_investments[-1]*((1+return_rate)-1)\n",
-    "    \n",
-    "    income = round(gross_income[i]+investment_return, 2)\n",
+    "    investment_return = renting_total_investments[-1] * ((1 + return_rate) - 1)\n",
+    "\n",
+    "    income = round(gross_income[i] + investment_return, 2)\n",
     "    renting_total_income.append(income)\n",
-    "    renting_total_investments.append(round(renting_total_investments[-1] + income - yearly_living_expenses[i] - annual_rents[i], 2))\n",
+    "    renting_total_investments.append(\n",
+    "        round(renting_total_investments[-1] + income - yearly_living_expenses[i] - annual_rents[i], 2))\n",
     "\n",
     "retirement_funds_yearly = []\n",
     "for i in range(20):\n",
-    "    retirement_funds_yearly.append(round(renting_total_investments[-1]*return_rate - annual_rents[30+i], 2))\n",
-    "    \n",
+    "    retirement_funds_yearly.append(round(renting_total_investments[-1] * return_rate - annual_rents[30 + i], 2))\n",
+    "\n",
     "print(\"yearly total income: \", renting_total_income, \"\\n\")\n",
-    "print(\"annual cost to rent: \\n\\t\", annual_rents,\"\\n\")\n",
-    "print(\"total rent: \", sum(annual_rents),\"\\n\")\n",
+    "print(\"annual cost to rent: \\n\\t\", annual_rents, \"\\n\")\n",
+    "print(\"total rent: \", sum(annual_rents), \"\\n\")\n",
     "print(\"annual total investments: \\n\\t\", renting_total_investments, \"\\n\")\n",
-    "print(\"worth after analysis period: \", renting_total_investments[-1] , \"\\n\")\n",
-    "print(\"net income 20 years after analysis period: \", retirement_funds_yearly,\"\\n\")\n",
-    "print(\"today's equivalent: \", [round(retirement_funds_yearly[i]/(1+inflation)**(yrs+i), 2) for i in range(20)])\n"
+    "print(\"worth after analysis period: \", renting_total_investments[-1], \"\\n\")\n",
+    "print(\"net income 20 years after analysis period: \", retirement_funds_yearly, \"\\n\")\n",
+    "print(\"today's equivalent: \", [round(retirement_funds_yearly[i] / (1 + inflation) ** (yrs + i), 2) for i in range(20)])\n"
    ]
   },
   {
@@ -209,6 +221,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
